--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p id="yellow">Paragraph-1</p>
+	<p id="Red">Paragraph-2</p>
+	<p id="Green">Paragraph-3</p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
